--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D5DA6A2A45E7BFE99580EBAAA81BF55A
+CopyrightNotice=Copyright Do Over Games All Rights Reserved
+
