Open any door smoothly

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ CameraSpeed=3
 LastLevel=/Game/Levels/BuildingEscape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2020.02.20-05.59.34
+Building_Escape.TimeStamp=2020.02.20-14.34.31
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.01.13-21.33.12
 PakFile.LastCompileMethod=Unknown
@@ -1427,7 +1427,7 @@ Generic.Geometry=True
 Generic.Surface Properties=True
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Models/SM_DoorFrame
