--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/DefaultLevel.DefaultLevel
+EditorStartupMap=/Game/Levels/BuildingEscape.BuildingEscape
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
