--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/BuildingEscape.BuildingEscape
+EditorStartupMap=/Game/Maps/BuildingEscape.BuildingEscape
+GameDefaultMap=/Game/Maps/BuildingEscape.BuildingEscape
+GlobalDefaultGameMode=/Game/Blueprints/BP_Building_Escape_Game_Mode.BP_Building_Escape_Game_Mode_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
