before code refactor

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ CurrentRotGridSize=0
 LastLevel=/Game/Maps/BuildingEscape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2020.02.21-02.57.54
+Building_Escape.TimeStamp=2020.02.21-03.37.35
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.01.13-21.33.12
 PakFile.LastCompileMethod=Unknown
@@ -768,6 +768,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn
 
 [RootWindow]
 ScreenPosition=X=960.000 Y=0.000
@@ -1540,6 +1541,13 @@ PhysicsHandleComponent.Cooking=True
 PhysicsHandleComponent.Events=True
 InputSettings.MouseProperties=False
 BlueprintEditorSettings.Experimental=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+Grabber.Variable=True
+Grabber.Sockets=True
+Grabber.Grabber=True
+Grabber.ComponentReplication=True
+Grabber.Events=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -1767,7 +1775,7 @@ bConvertSceneUnit=False
 /Game/Models/SM_DoorFrame.SM_DoorFrame=1
 /Game/Materials/MI_Concrete_Ceiling.MI_Concrete_Ceiling=1
 /Game/Materials/M_Concrete.M_Concrete=1
-/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn=1
+/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn=0
 /Game/Blueprints/BP_Building_Escape_Game_Mode.BP_Building_Escape_Game_Mode=1
 
 [MaterialEditor]
@@ -1827,5 +1835,8 @@ bPreloadEngineModules=False
 bPreloadEnginePluginModules=False
 bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
 
