--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ CurrentRotGridSize=0
 LastLevel=/Game/Maps/BuildingEscape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2020.02.21-03.37.35
+Building_Escape.TimeStamp=2020.02.21-04.24.33
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.01.13-21.33.12
 PakFile.LastCompileMethod=Unknown
@@ -767,11 +767,10 @@ BlueprintGraph.TimeStamp=2020.01.13-21.33.04
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=960.000 Y=0.000
+ScreenPosition=X=1891.000 Y=0.000
 WindowSize=X=1430.000 Y=1030.000
 InitiallyMaximized=True
 
