finished tech demo before adding content

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ CurrentRotGridSize=0
 LastLevel=/Game/Maps/BuildingEscape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2020.02.21-04.24.33
+Building_Escape.TimeStamp=2020.02.21-19.32.06
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.01.13-21.33.12
 PakFile.LastCompileMethod=Unknown
@@ -767,7 +767,7 @@ BlueprintGraph.TimeStamp=2020.01.13-21.33.04
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=1891.000 Y=0.000
@@ -858,6 +858,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -877,7 +878,6 @@ RecentlyPlaced=/Game/Models/Skull_Floor.Skull_Floor;
 RecentlyPlaced=/Game/Models/PileOfSkulls_basecolor.PileOfSkulls_basecolor;
 RecentlyPlaced=/Game/Models/PileOfSkulls_opacity.PileOfSkulls_opacity;
 RecentlyPlaced=/Game/Models/PileOfSkulls_normal.PileOfSkulls_normal;
-RecentlyPlaced=/Game/Models/PileOfSkulls_mrao.PileOfSkulls_mrao;
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -1547,6 +1547,46 @@ Grabber.Sockets=True
 Grabber.Grabber=True
 Grabber.ComponentReplication=True
 Grabber.Events=True
+REINST_BP_DefaultPawn_C_33.Variable=True
+REINST_BP_DefaultPawn_C_33.TransformCommon=True
+REINST_BP_DefaultPawn_C_33.Sockets=True
+REINST_BP_DefaultPawn_C_33.Shape=True
+REINST_BP_DefaultPawn_C_33.Navigation=True
+REINST_BP_DefaultPawn_C_33.Rendering=True
+REINST_BP_DefaultPawn_C_33.Physics=True
+REINST_BP_DefaultPawn_C_33.Collision=True
+REINST_BP_DefaultPawn_C_33.Tags=True
+REINST_BP_DefaultPawn_C_33.ComponentReplication=True
+REINST_BP_DefaultPawn_C_33.Cooking=True
+REINST_BP_DefaultPawn_C_33.Events=True
+REINST_BP_DefaultPawn_C_49.Variable=True
+REINST_BP_DefaultPawn_C_49.TransformCommon=True
+REINST_BP_DefaultPawn_C_49.Sockets=True
+REINST_BP_DefaultPawn_C_49.StaticMesh=True
+REINST_BP_DefaultPawn_C_49.Materials=True
+REINST_BP_DefaultPawn_C_49.Physics=True
+REINST_BP_DefaultPawn_C_49.Collision=True
+REINST_BP_DefaultPawn_C_49.Lighting=True
+REINST_BP_DefaultPawn_C_49.Rendering=True
+REINST_BP_DefaultPawn_C_49.Tags=True
+REINST_BP_DefaultPawn_C_49.ComponentReplication=True
+REINST_BP_DefaultPawn_C_49.Cooking=True
+REINST_BP_DefaultPawn_C_49.Events=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sound=True
+AudioComponent.Attenuation=True
+AudioComponent.AttenuationDistance=True
+AudioComponent.Filter=True
+AudioComponent.AttenuationSpatialization=True
+AudioComponent.AttenuationAirAbsorption=True
+AudioComponent.Attachment=True
+AudioComponent.AttenuationListenerFocus=True
+AudioComponent.Modulation=True
+AudioComponent.AttenuationOcclusion=True
+AudioComponent.Concurrency=True
+AudioComponent.Tags=True
+AudioComponent.Activation=True
+AudioComponent.Cooking=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -1774,7 +1814,7 @@ bConvertSceneUnit=False
 /Game/Models/SM_DoorFrame.SM_DoorFrame=1
 /Game/Materials/MI_Concrete_Ceiling.MI_Concrete_Ceiling=1
 /Game/Materials/M_Concrete.M_Concrete=1
-/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn=0
+/Game/Blueprints/BP_DefaultPawn.BP_DefaultPawn=1
 /Game/Blueprints/BP_Building_Escape_Game_Mode.BP_Building_Escape_Game_Mode=1
 
 [MaterialEditor]
@@ -1826,6 +1866,7 @@ PrimType=2
 Brush.Actor=True
 Brush.BrushSettings=False
 StaticMeshActor.Collision=False
+BP_DefaultPawn_C.Physics=True
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
